Global style and Variables

--- a/src/pages/acronym/acronym.html
+++ b/src/pages/acronym/acronym.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      <img class="title-image" alt="logo" height="40"   src="assets/img/logo.png" > 
     </ion-title>
   </ion-navbar>
 </ion-header>
