--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>
+      <img class="title-image" alt="logo" height="40"   src="assets/img/logo.png" >
+    </ion-title>
   </ion-navbar>
 </ion-header>
 
