New Home Page Styling

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,14 +6,36 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+
+  <!-- Beginning of the category card -->
+  <div class="padding_helper" color="white">
+    <div class="category__image">
+        <div class="text-center image__padding">
+          <p class="section__headline">
+              The Stuff
+          </p>
+          <p class="nomargin category__headline">
+              Pineapple
+          </p>
+        </div>
+    </div>
+  </div>
+  <!-- End of the category card -->
+
+  <!-- Beginning of the category card -->
+  <div class="padding_helper" color="white">
+    <div class="category__image">
+        <div class="text-center image__padding">
+          <p class="section__headline">
+              The lingo
+          </p>
+          <p class="nomargin category__headline">
+              Acronyms
+          </p>
+        </div>
+    </div>
+  </div>
+  <!-- End of the category card -->
+
 </ion-content>
