--- a/src/pages/single-item/single-item.html
+++ b/src/pages/single-item/single-item.html
@@ -7,5 +7,8 @@
 </ion-header>
 
 <ion-content padding>
-    <h1>Hey</h1>
+    <h1>{{ item.title }}</h1>
+    <p>
+      {{ item.description }}
+    </p>
 </ion-content>
