New category calls

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,7 @@
 <ion-content>
 
   <!-- Beginning of the category card -->
-  <div class="padding_helper" color="white">
+  <div class="padding_helper" color="white" (click)="CategoryTapped()">
     <div class="category__image">
         <div class="text-center image__padding">
           <p class="section__headline">
@@ -25,7 +25,7 @@
 
   <!-- Beginning of the category card -->
   <div class="padding_helper" color="white">
-    <div class="category__image">
+    <div class="category__image2">
         <div class="text-center image__padding">
           <p class="section__headline">
               The lingo
@@ -38,6 +38,19 @@
   </div>
   <!-- End of the category card -->
 
-  <a href="#" class="btn__solid__blue">Test Button</a>
+  <!-- Beginning of the category card -->
+  <div class="padding_helper" color="white">
+    <div class="category__image3">
+        <div class="text-center image__padding">
+          <p class="section__headline">
+              The lingo
+          </p>
+          <p class="nomargin category__headline">
+              Acronyms
+          </p>
+        </div>
+    </div>
+  </div>
+  <!-- End of the category card -->
 
 </ion-content>
