Category params and loader

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,14 +24,14 @@
   <!-- End of the category card -->
 
   <!-- Beginning of the category card -->
-  <div class="padding_helper" color="white">
+  <div class="padding_helper" color="white" (click)="CategoryTapped_2()">
     <div class="category__image2">
         <div class="text-center image__padding">
           <p class="section__headline">
-              The lingo
+              The breakfast
           </p>
           <p class="nomargin category__headline">
-              Acronyms
+              Eggs on a pan
           </p>
         </div>
     </div>
@@ -39,14 +39,14 @@
   <!-- End of the category card -->
 
   <!-- Beginning of the category card -->
-  <div class="padding_helper" color="white">
+  <div class="padding_helper" color="white" (click)="CategoryTapped_3()">
     <div class="category__image3">
         <div class="text-center image__padding">
           <p class="section__headline">
-              The lingo
+              The snacks
           </p>
           <p class="nomargin category__headline">
-              Acronyms
+              Burger
           </p>
         </div>
     </div>
