--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -8,18 +8,18 @@
 
 <ion-content>
 
-  <!-- Toolbar to wrap search bar -->
+  <!-- Toolbar to wrap search bar
   <ion-toolbar>
-
+-->
     <!-- Searchbar Code -->
     <ion-searchbar
       placeholder="Search"
       (ionInput)="getItems($event)">
     </ion-searchbar>
     <!-- End of Searchbar Code -->
-
+  <!--
   </ion-toolbar>
-  <!-- End of Toolbar Code -->
+ End of Toolbar Code -->
 
 
 
