Fixed navbar and added gif to readme

--- a/src/pages/single-item/single-item.html
+++ b/src/pages/single-item/single-item.html
@@ -9,7 +9,7 @@
 <ion-content>
 
     <!-- Header content with background -->
-    <div class="header text-center">
+    <div class="background_image_header text-center">
 
       <br>
 
